# MLOPSexamen

./: EXAMEN_MLOPS_Cedric_Lagrou.docx  README.md  docker-compose.yml  exam-version-1.md  pyproject.toml  ~$AMEN_MLOPS_Cedric_Lagrou.docx
.github/workflows/: automation.yml
api/: exam-1-dockerfile  pyproject.toml
frontend/: frontend-dockerfile
kubernetes/: API_deployment.yaml  FrontEnd_deployment.yaml  FrontEnd_service.yaml  api_service.yaml  configMap.yaml  nginx_deploy.yaml
