[tool.poetry]
name = "fastapi-env"
version = "0.1.0"
description = ""
authors = ["LagrouCedric <71886193+LagrouCedric@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_env"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
SQLAlchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
